# MEW_gcode_render

./: .gitignore  LICENSE.md  README.md  pyproject.toml
blender_templates/: CSV_Path_to_Mesh.blend
examples/: hex_tube.blend  hex_tube.csv  hex_tube.gcode  non_uniform_tube.csv  non_uniform_tube.gcode  square.csv  square.gcode
src/mew_gcode_render/: __main__.py  cli.py  gcode_reader.py  gcode_segment.py  geometry_parser.py  main.py
test/: test_cylindrical_transform.py  test_gcode_reader.py  test_geometry_parser.py
